# django-ajaxview

./: LICENSE  MANIFEST.in  Pipfile  README.md  manage.py  mkdocs.yml  setup.cfg  test_settings.py
.github/workflows/: python-publish.yml  python-tests.yml
ajaxview/: __init__.py
ajaxview/templates/: ajax_headers.html
ajaxview/tests/: test_ajaxview.py
docs/: changelog.md  index.md  installation.md  usage.md
