[metadata]
name = django-ajaxview
version = 1.0.1
include_package_data = True
description = Django Ajax base view
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkinder/django-ajaxview
author = Ken Kinder
author_email = ken+ajaxview@kkinder.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.0
test_suite = load_tests.get_suite